--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <img src="assets/images/logo.svg" alt="Logo Tech Book Club">
+    </header>
 </body>
 </html>
