--- a/index.html
+++ b/index.html
@@ -8,7 +8,43 @@
 </head>
 <body>
     <header>
-        <img src="assets/images/logo.svg" alt="Logo Tech Book Club">
+        <img src="assets/images/logo.svg" alt="Tech Book Club">
     </header>
+    <section id="hero">
+
+        <!-- Container Hero Texts -->
+        <div class="Hero_texts">
+            <h1>Join the ultimate tech book club</h1>
+            <p>Turn your reading time into learning time with fellow tech enthusiasts. Get curated recommendations, join vibrant discussions, and level up your skills one chapter at a time.</p>
+        </div>
+
+        <!-- Container do Call To Action -->
+        <div class="cta-container">
+            <a href="#">
+                REVIEW MEMBERSHIP OPTIONS
+                <img src="assets/images/icon-arrow-down.svg" alt=" icone seta para baixo">
+            </a>
+
+            <!-- Container depoimentos(Comentários) -->
+            <div class="testimonials-container">
+                <img src="assets/images/image-avatars.webp" alt="Grupo de membros do clube de leitura.">
+                
+                <div class="rating-container">
+                    <!-- Container 5 estrelas -->
+                    <div class="stars-container" aria-label="5 de 5 estrelas">
+                        <img src="assets/images/icon-star.svg" alt="">
+                        <img src="assets/images/icon-star.svg" alt="">
+                        <img src="assets/images/icon-star.svg" alt="">
+                        <img src="assets/images/icon-star.svg" alt="">
+                        <img src="assets/images/icon-star.svg" alt="">
+                    </div>
+                    <p>200+ developers joined already</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Hero Image -->
+        <img src="assets/images/image-hero-mobile.webp" alt="Imagem de pessoas lendo livros juntos.">
+    </section>
 </body>
 </html>
