feat(html: read together): adicionar sessão de Read together ao html

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tecnology Book Club</title>
+    <title>Tecnology Book Club - Join the ultimate technology reading community</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <img src="assets/images/logo.svg" alt="Tech Book Club">
     </header>
-    <section id="hero">
+
+    <!-- hero section -->
+    <section class="hero">
 
         <!-- Container Hero Texts -->
         <div class="Hero_texts">
@@ -28,7 +30,7 @@
             <!-- Container depoimentos(Comentários) -->
             <div class="testimonials-container">
                 <img src="assets/images/image-avatars.webp" alt="Grupo de membros do clube de leitura.">
-                
+
                 <div class="rating-container">
                     <!-- Container 5 estrelas -->
                     <div class="stars-container" aria-label="5 de 5 estrelas">
@@ -46,5 +48,30 @@
         <!-- Hero Image -->
         <img src="assets/images/image-hero-mobile.webp" alt="Imagem de pessoas lendo livros juntos.">
     </section>
+
+    <!-- Main container -->
+     <main>
+        <section class="read-together">
+            <div class="text-container">
+                <h2>Read together, grow together</h2>
+                <ul class="features-list">
+                    <li class="feature-item">         
+                        Monthly curated tech reads selected by industry experts
+                    </li>
+                    <li class="feature-item">
+                        Virtual and in-person meetups for deep-dive discussions
+                    </li>
+                    <li class="feature-item">  
+                        Early access to new tech book releases
+                    </li>
+                    <li class="feature-item">
+                        Author Q&A sessions with tech thought leaders
+                    </li>
+                </ul>
+            </div>
+
+            <img src="assets/images/image-read-together-mobile.webp" alt="Imagem de pessoas lendo livros juntos 2.">
+        </section>
+     </main>
 </body>
 </html>
