feat(html: reading-journey): adicionar sessão de Reading Journey

--- a/index.html
+++ b/index.html
@@ -67,8 +67,41 @@
                 </li>
             </ul>
         </div>
-        
+
         <img src="assets/images/image-read-together-mobile.webp" alt="Imagem de pessoas lendo livros juntos 2.">
+    </section>
+
+    <section class="reading-journey">
+        <h1>Your tech reading journey</h1>
+        <div class="step-container">
+            <div class="step">
+                <div class="step_number_container">
+                    1
+                </div>
+                <p class="step-description">Choose your membership tier</p>
+            </div>
+            <div class="step">
+                <div class="step_number_container">
+                    2
+                </div>
+                <p class="step-description">Get your monthly book selection</p>
+            </div>
+            <div class="step">
+                <div class="step_number_container">
+                    3
+                </div>
+                <p class="step-description">Join our discussion forums</p>
+            </div>
+            <div class="step">
+                <div class="step_number_container">
+                    4
+                </div>
+                <p class="step-description">Attend exclusive meetups</p>
+            </div>
+
+            <!-- Glow -->
+            <!-- <img src="assets/images/pattern-glow.svg" alt=""> -->
+        </div>
     </section>
 </body>
 </html>
