feat(html): adicionar container main novamente para segurar as sessões e fazer algumas organizações de código

--- a/index.html
+++ b/index.html
@@ -1,107 +1,116 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tecnology Book Club - Join the ultimate technology reading community</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <img src="assets/images/logo.svg" alt="Tech Book Club">
     </header>
+    <main>
 
-    <!-- hero section -->
-    <section class="hero">
+        <!-- hero section -->
+        <section class="hero">
 
-        <!-- Container Hero Texts -->
-        <div class="Hero_texts">
-            <h1>Join the ultimate tech book club</h1>
-            <p>Turn your reading time into learning time with fellow tech enthusiasts. Get curated recommendations, join vibrant discussions, and level up your skills one chapter at a time.</p>
-        </div>
+            <!-- Container Hero Texts -->
+            <div class="Hero_texts">
+                <h1>Join the ultimate tech book club</h1>
+                <p>Turn your reading time into learning time with fellow tech enthusiasts. Get curated recommendations,
+                    join vibrant discussions, and level up your skills one chapter at a time.</p>
+            </div>
 
-        <!-- Container do Call To Action -->
-        <div class="cta-container">
-            <a href="#">
-                REVIEW MEMBERSHIP OPTIONS
-                <img src="assets/images/icon-arrow-down.svg" alt=" icone seta para baixo">
-            </a>
+            <!-- Container do Call To Action -->
+            <div class="cta-container">
+                <a href="#">
+                    REVIEW MEMBERSHIP OPTIONS
+                    <img src="assets/images/icon-arrow-down.svg" alt=" icone seta para baixo">
+                </a>
 
-            <!-- Container depoimentos(Comentários) -->
-            <div class="testimonials-container">
-                <img src="assets/images/image-avatars.webp" alt="Grupo de membros do clube de leitura.">
+                <!-- Container depoimentos(Comentários) -->
+                <div class="testimonials-container">
+                    <img src="assets/images/image-avatars.webp" alt="Grupo de membros do clube de leitura.">
 
-                <div class="rating-container">
-                    <!-- Container 5 estrelas -->
-                    <div class="stars-container" aria-label="5 de 5 estrelas">
-                        <img src="assets/images/icon-star.svg" alt="">
-                        <img src="assets/images/icon-star.svg" alt="">
-                        <img src="assets/images/icon-star.svg" alt="">
-                        <img src="assets/images/icon-star.svg" alt="">
-                        <img src="assets/images/icon-star.svg" alt="">
+                    <div class="rating-container">
+                        <!-- Container 5 estrelas -->
+                        <div class="stars-container" aria-label="5 de 5 estrelas">
+                            <img src="assets/images/icon-star.svg" alt="">
+                            <img src="assets/images/icon-star.svg" alt="">
+                            <img src="assets/images/icon-star.svg" alt="">
+                            <img src="assets/images/icon-star.svg" alt="">
+                            <img src="assets/images/icon-star.svg" alt="">
+                        </div>
+                        <p>200+ developers joined already</p>
                     </div>
-                    <p>200+ developers joined already</p>
                 </div>
             </div>
-        </div>
 
-        <!-- Hero Image -->
-        <img src="assets/images/image-hero-mobile.webp" alt="Imagem de pessoas lendo livros juntos.">
-    </section>
+            <!-- Hero Image -->
+            <img src="assets/images/image-hero-mobile.webp" alt="Imagem de pessoas lendo livros juntos.">
+        </section>
 
-    <section class="read-together">
-        <div class="text-container">
-            <h2>Read together, grow together</h2>
-            <ul class="features-list">
-                <li class="feature-item">         
-                    Monthly curated tech reads selected by industry experts
-                </li>
-                <li class="feature-item">
-                    Virtual and in-person meetups for deep-dive discussions
-                </li>
-                <li class="feature-item">  
-                    Early access to new tech book releases
-                </li>
-                <li class="feature-item">
-                    Author Q&A sessions with tech thought leaders
-                </li>
-            </ul>
-        </div>
 
-        <img src="assets/images/image-read-together-mobile.webp" alt="Imagem de pessoas lendo livros juntos 2.">
-    </section>
-
-    <section class="reading-journey">
-        <h1>Your tech reading journey</h1>
-        <div class="step-container">
-            <div class="step">
-                <div class="step_number_container">
-                    1
-                </div>
-                <p class="step-description">Choose your membership tier</p>
+        <!-- Sessão read-together -->
+        <section class="read-together">
+            <div class="text-container">
+                <h2>Read together, grow together</h2>
+                <ul class="features-list">
+                    <li class="feature-item">
+                        Monthly curated tech reads selected by industry experts
+                    </li>
+                    <li class="feature-item">
+                        Virtual and in-person meetups for deep-dive discussions
+                    </li>
+                    <li class="feature-item">
+                        Early access to new tech book releases
+                    </li>
+                    <li class="feature-item">
+                        Author Q&A sessions with tech thought leaders
+                    </li>
+                </ul>
             </div>
-            <div class="step">
-                <div class="step_number_container">
-                    2
-                </div>
-                <p class="step-description">Get your monthly book selection</p>
-            </div>
-            <div class="step">
-                <div class="step_number_container">
-                    3
-                </div>
-                <p class="step-description">Join our discussion forums</p>
-            </div>
-            <div class="step">
-                <div class="step_number_container">
-                    4
-                </div>
-                <p class="step-description">Attend exclusive meetups</p>
-            </div>
+            <img src="assets/images/image-read-together-mobile.webp" alt="Imagem de pessoas lendo livros juntos 2.">
+        </section>
 
-            <!-- Glow -->
-            <!-- <img src="assets/images/pattern-glow.svg" alt=""> -->
-        </div>
-    </section>
+        
+        <!-- Reading Journey -->
+        <section class="reading-journey">
+            <h2>Your tech reading journey</h2>
+            <div class="step-container">
+                <div class="step">
+                    <div class="step_number_container">
+                        1
+                    </div>
+                    <p class="step-description">Choose your membership tier</p>
+                </div>
+                <div class="step">
+                    <div class="step_number_container">
+                        2
+                    </div>
+                    <p class="step-description">Get your monthly book selection</p>
+                </div>
+                <div class="step">
+                    <div class="step_number_container">
+                        3
+                    </div>
+                    <p class="step-description">Join our discussion forums</p>
+                </div>
+                <div class="step">
+                    <div class="step_number_container">
+                        4
+                    </div>
+                    <p class="step-description">Attend exclusive meetups</p>
+                </div>
+                <!-- Glow (Vou por depois)-->
+                <!-- <img src="assets/images/pattern-glow.svg" alt=""> -->
+            </div>
+        </section>
+
+    </main>
 </body>
+
 </html>
