--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
         <img src="assets/images/logo.svg" alt="Tech Book Club">
     </header>
     <main>
-
+        
         <!-- hero section -->
         <section class="hero">
 
             <!-- Container Hero Texts -->
             <div class="Hero_texts">
                 <h1>Join the ultimate tech book club</h1>
-                <p>Turn your reading time into learning time with fellow tech enthusiasts. Get curated recommendations,
-                    join vibrant discussions, and level up your skills one chapter at a time.</p>
+                <p>
+                    Turn your reading time into learning time with fellow tech enthusiasts. Get curated recommendations,
+                    join vibrant discussions, and level up your skills one chapter at a time.
+                </p>
             </div>
 
             <!-- Container do Call To Action -->
@@ -76,7 +78,7 @@
             <img src="assets/images/image-read-together-mobile.webp" alt="Imagem de pessoas lendo livros juntos 2.">
         </section>
 
-        
+
         <!-- Reading Journey -->
         <section class="reading-journey">
             <h2>Your tech reading journey</h2>
