feat(style.css: header, hero, read-together): ajustar o tamanho das imagens das sessões header, hero, read-together

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
 
             <!-- Hero Image -->
-            <img src="assets/images/image-hero-mobile.webp" alt="Imagem de pessoas lendo livros juntos.">
+            <img src="assets/images/image-hero-mobile.webp" alt="Imagem de pessoas lendo livros juntos." class="image">
         </section>
 
 
@@ -75,7 +75,7 @@
                     </li>
                 </ul>
             </div>
-            <img src="assets/images/image-read-together-mobile.webp" alt="Imagem de pessoas lendo livros juntos 2.">
+            <img src="assets/images/image-read-together-mobile.webp" alt="Imagem de pessoas lendo livros juntos 2." class="image">
         </section>
 
 
