feat(style.css: hero): adicionar estilos do CTA da sessão hero, letter space nos textos e mudança na organização do nesting

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section class="hero">
 
             <!-- Container Hero Texts -->
-            <div class="Hero_texts">
+            <div class="hero_texts">
                 <h1>Join the ultimate tech book club</h1>
                 <p>
                     Turn your reading time into learning time with fellow tech enthusiasts. Get curated recommendations,
