feat(style.css: testimonials-container): adicionar estilos a sessão de depoimentos e avaliação 5 estrelas

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                 <!-- Container depoimentos(Comentários) -->
                 <div class="testimonials-container">
-                    <img src="assets/images/image-avatars.webp" alt="Grupo de membros do clube de leitura.">
+                    <img src="assets/images/image-avatars.webp" alt="Grupo de membros do clube de leitura." class="testimonials-image">
 
                     <div class="rating-container">
                         <!-- Container 5 estrelas -->
