--- a/index.html
+++ b/index.html
@@ -63,15 +63,19 @@
                 <h2>Read together, grow together</h2>
                 <ul class="features-list">
                     <li class="feature-item">
+                        <img src="assets/images/icon-check.svg" alt="">
                         Monthly curated tech reads selected by industry experts
                     </li>
                     <li class="feature-item">
+                        <img src="assets/images/icon-check.svg" alt="">
                         Virtual and in-person meetups for deep-dive discussions
                     </li>
                     <li class="feature-item">
+                        <img src="assets/images/icon-check.svg" alt="">
                         Early access to new tech book releases
                     </li>
                     <li class="feature-item">
+                        <img src="assets/images/icon-check.svg" alt="">
                         Author Q&A sessions with tech thought leaders
                     </li>
                 </ul>
