feat(html): adicionar a o conteudo da sessão Not Avarege Book Club

--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
                 <h2>Read together, grow together</h2>
                 <ul class="features-list">
                     <li class="feature-item">
-                        <img src="assets/images/icon-check.svg" alt="">
+                        <img src="assets/images/icon-check.svg" alt="checkbox">
                         Monthly curated tech reads selected by industry experts
                     </li>
                     <li class="feature-item">
-                        <img src="assets/images/icon-check.svg" alt="">
+                        <img src="assets/images/icon-check.svg" alt="checkbox">
                         Virtual and in-person meetups for deep-dive discussions
                     </li>
                     <li class="feature-item">
-                        <img src="assets/images/icon-check.svg" alt="">
+                        <img src="assets/images/icon-check.svg" alt="checkbox">
                         Early access to new tech book releases
                     </li>
                     <li class="feature-item">
-                        <img src="assets/images/icon-check.svg" alt="">
+                        <img src="assets/images/icon-check.svg" alt="checkbox">
                         Author Q&A sessions with tech thought leaders
                     </li>
                 </ul>
@@ -83,6 +83,20 @@
             <img src="assets/images/image-read-together-mobile.webp" alt="Imagem de pessoas lendo livros juntos 2." class="image">
         </section>
 
+        <!-- Sessão de Not Avarege Book Club -->
+        <section class="avarege-book-club">
+            <div class="text-container">
+                <h2>Not your average book club</h2>
+                <p>Connect with a community that speaks your language - from Python to TypeScript and everything in between. Our discussions blend technical depth with practical applications.</p>
+                <img src="assets/images/pattern-circle.png" alt="Imagem de um circulo">
+            </div>
+            
+            <!-- logo das tecnologias -->
+            <img src="assets/images/logos-tech.svg" alt="Logos das tecnologias">
+
+            <!-- Imagem das pessoas -->
+            <img src="assets/images/image-not-average-mobile.webp" alt="Pessoas lendo livros socialmente" class="image">
+        </section>
 
         <!-- Reading Journey -->
         <section class="reading-journey">
