--- a/index.html
+++ b/index.html
@@ -86,13 +86,25 @@
         <!-- Sessão de Not Avarege Book Club -->
         <section class="avarege-book-club">
             <div class="text-container">
-                <h2>Not your average book club</h2>
-                <p>Connect with a community that speaks your language - from Python to TypeScript and everything in between. Our discussions blend technical depth with practical applications.</p>
-                <img src="assets/images/pattern-circle.png" alt="Imagem de um circulo">
+                <h2>
+                    Not your average book club 
+                    <span>
+                    <img src="assets/images/pattern-circle.png" alt="Imagem de um circulo" >
+                    </span>
+                </h2>
+                <p>
+                    Connect with a community that speaks your language - from 
+                    <strong>
+                        Python
+                    </strong> to 
+                    <strong>
+                        TypeScript
+                    </strong> and everything in between. Our discussions blend technical depth with practical applications.
+                </p>
             </div>
-            
+
             <!-- logo das tecnologias -->
-            <img src="assets/images/logos-tech.svg" alt="Logos das tecnologias">
+            <img src="assets/images/logos-tech.svg" alt="Logos das tecnologias" class="tech-logos">
 
             <!-- Imagem das pessoas -->
             <img src="assets/images/image-not-average-mobile.webp" alt="Pessoas lendo livros socialmente" class="image">
