feat(css): adicionar estilos da sessão de reading journey

--- a/index.html
+++ b/index.html
@@ -137,10 +137,9 @@
                         4
                     </div>
                     <p class="step-description">Attend exclusive meetups</p>
-                </div>
-                <!-- Glow (Vou por depois)-->
-                <!-- <img src="assets/images/pattern-glow.svg" alt=""> -->
+                </div>  
             </div>
+            <img src="assets/images/pattern-glow.svg" alt="brilho azul">
         </section>
 
     </main>
