feat(html): adicionar conteudo da sessão de Membership Options

--- a/index.html
+++ b/index.html
@@ -142,6 +142,108 @@
             <img src="assets/images/pattern-glow.svg" alt="brilho azul">
         </section>
 
+        <!-- Membership Options -->
+         <section class="membership-option">
+            <h2>Membership options</h2>
+
+            <div class="container-cards-options">
+
+                <!-- Starter -->
+                <div class="option-card">                   
+                    <div class="options-details">
+                        <h3>Starter</h3>
+                        <span>$19</span>
+                        <span>/month</span>
+                        <hr>
+
+                        <div class="features-container">
+                            <div class="features-item">
+                                <span>
+                                    <img src="assets/images/icon-check.svg" alt="checkbox">
+                                </span>
+                                <span>
+                                    2 books/month
+                                </span>
+                            </div>
+                            <div class="features-item">
+                                <span>
+                                    <img src="assets/images/icon-check.svg" alt="checkbox">
+                                </span>
+                                <span>
+                                    Online forums
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="#" class="button-membership">
+                        SUBSCRIBE NOW
+                    </a>
+                </div>
+                
+                <!-- Pro -->
+                <div class="option-card">  
+                    <div class="options-details">
+                        <h3>Pro</h3>
+                        <span>$29</span>
+                        <span>/month</span>
+                        <hr>
+
+                        <div class="features-container">
+                            <div class="features-item">
+                                <span>
+                                    <img src="assets/images/icon-check.svg" alt="checkbox">
+                                </span>
+                                <span>
+                                    2 books/month
+                                </span>
+                            </div>
+                            <div class="features-item">
+                                <span>
+                                    <img src="assets/images/icon-check.svg" alt="checkbox">
+                                </span>
+                                <span>
+                                    Virtual meetups
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="#" class="button-membership">
+                        SUBSCRIBE NOW
+                    </a>
+                </div>
+
+                <!-- Enterprise -->
+                <div class="option-card">
+                    <div class="options-details">
+                        <h3>Enterprise</h3>
+                        <span>Custom</span>
+                        <hr>
+
+                        <div class="features-container">
+                            <div class="features-item">
+                                <span>
+                                    <img src="assets/images/icon-check.svg" alt="checkbox">
+                                </span>
+                                <span>
+                                    Team Access
+                                </span>
+                            </div>
+                            <div class="features-item">
+                                <span>
+                                    <img src="assets/images/icon-check.svg" alt="checkbox">
+                                </span>
+                                <span>
+                                    Private sessions
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="#" class="button-membership">
+                        TALK TO US
+                    </a>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
