--- a/index.html
+++ b/index.html
@@ -258,6 +258,24 @@
                 </div>
             </div>
         </section>
+
+        <!-- Testimonials -->
+         <section class="testimonial">
+            <div class="rating-container" aria-label="5 de 5 estrelas">
+                <img src="assets/images/icon-star.svg" alt="">
+                <img src="assets/images/icon-star.svg" alt="">
+                <img src="assets/images/icon-star.svg" alt="">
+                <img src="assets/images/icon-star.svg" alt="">
+                <img src="assets/images/icon-star.svg" alt="">
+            </div>
+
+            <div class="testimonial-content">
+                <h3>
+                    "This book club transformed my technical reading from a solitary activity into an enriching community experience. The discussions are gold!"
+                </h3>
+                <p>Sarah Chen, Software Architect</p>
+            </div>
+         </section>
     </main>
 </body>
 
