feat(css): finalizar estilos do footer mais tarde

--- a/index.html
+++ b/index.html
@@ -294,19 +294,22 @@
                     <img src="assets/images/icon-arrow-up.svg" alt=" icone seta para cima">
                 </a>
 
-                <!-- Imagem dos perfis -->
-                <img src="assets/images/image-avatars.webp" alt="Grupo de membros do clube de leitura." class="testimonials-image">
+                
+                <div class="testimonials-container">
+                    <!-- Imagem dos perfis -->
+                    <img src="assets/images/image-avatars.webp" alt="Grupo de membros do clube de leitura." class="testimonials-image">
                     
-                <div class="rating-container">
-                    <!-- Container 5 estrelas -->
-                    <div class="stars-container" aria-label="5 de 5 estrelas">
-                        <img src="assets/images/icon-star.svg" alt="">
-                        <img src="assets/images/icon-star.svg" alt="">
-                        <img src="assets/images/icon-star.svg" alt="">
-                        <img src="assets/images/icon-star.svg" alt="">
-                        <img src="assets/images/icon-star.svg" alt="">
+                    <div class="rating-container">
+                        <!-- Container 5 estrelas -->
+                        <div class="stars-container" aria-label="5 de 5 estrelas">
+                            <img src="assets/images/icon-star.svg" alt="">
+                            <img src="assets/images/icon-star.svg" alt="">
+                            <img src="assets/images/icon-star.svg" alt="">
+                            <img src="assets/images/icon-star.svg" alt="">
+                            <img src="assets/images/icon-star.svg" alt="">
+                        </div>
+                        <p>200+ developers joined already</p>
                     </div>
-                    <p>200+ developers joined already</p>
                 </div>
             </div>
 
