refactor(html, css): Melhorar a  linkagem aos botões no html, ajustar os estilos do footer no css

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <!-- Container do Call To Action -->
             <div class="cta-container">
-                <a href="#">
+                <a href="#membership-options">
                     REVIEW MEMBERSHIP OPTIONS
                     <img src="assets/images/icon-arrow-down.svg" alt=" icone seta para baixo">
                 </a>
@@ -148,7 +148,7 @@
         </section>
 
         <!-- Membership Options -->
-        <section class="membership-option">
+        <section class="membership-option" id="membership-options">
             <h2>Membership options</h2>
 
             <div class="container-cards-options">
@@ -289,7 +289,7 @@
 
             <div class="footer-cta">
                 <!-- Button CTA -->
-                <a href="#">
+                <a href="#membership-options">
                     REVIEW MEMBERSHIP OPTIONS
                     <img src="assets/images/icon-arrow-up.svg" alt=" icone seta para cima">
                 </a>
@@ -299,7 +299,7 @@
                     <!-- Imagem dos perfis -->
                     <img src="assets/images/image-avatars.webp" alt="Grupo de membros do clube de leitura." class="testimonials-image">
                     
-                    <div class="rating-container">
+                    <div class="rating-container-footer">
                         <!-- Container 5 estrelas -->
                         <div class="stars-container" aria-label="5 de 5 estrelas">
                             <img src="assets/images/icon-star.svg" alt="">
