content(html, css): ajustar a geração de imagens de acordo com a largura da tela(Tablet e mobile)

--- a/index.html
+++ b/index.html
@@ -56,7 +56,15 @@
             </div>
 
             <!-- Hero Image -->
-            <img src="assets/images/image-hero-mobile.webp" alt="Imagem de pessoas lendo livros juntos." class="image">
+            <div class="images-hero"> 
+                <img src="assets/images/image-hero-mobile.webp" alt="Pessoas lendo livros socialmente" class="hero-mobile">
+
+                <img src="assets/images/image-hero-tablet.webp" alt="Pessoas lendo livros socialmente" class="hero-tablet">
+
+                <img src="assets/images/image-hero-desktop.webp" alt="Pessoas lendo livros socialmente" class="hero-desktop">
+            </div>
+
+
             
             <!-- Glow -->
             
