--- a/index.html
+++ b/index.html
@@ -96,8 +96,15 @@
                     </li>
                 </ul>
             </div>
-            <img src="assets/images/image-read-together-mobile.webp" alt="Imagem de pessoas lendo livros juntos 2."
-                class="image">
+
+
+            <div class="images-read-together">
+                <img src="assets/images/image-read-together-mobile.webp" alt="Pessoas lendo livros socialmente" class="read-together-mobile">
+
+                <img src="assets/images/image-read-together-tablet.webp" alt="Pessoas lendo livros socialmente" class="read-together-tablet">
+
+                <img src="assets/images/image-read-together-desktop.webp" alt="Pessoas lendo livros socialmente" class="read-together-desktop">
+            </div>
         </section>
 
         <!-- Sessão de Not Avarege Book Club -->
