--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </ul>
             </div>
 
-
+            <!-- Imagens -->
             <div class="images-read-together">
                 <img src="assets/images/image-read-together-mobile.webp" alt="Pessoas lendo livros socialmente" class="read-together-mobile">
 
@@ -127,12 +127,18 @@
                     applications.
                 </p>
             </div>
-
-            <!-- logo das tecnologias -->
-            <img src="assets/images/logos-tech.svg" alt="Logos das tecnologias" class="tech-logos">
+            
 
             <!-- Imagem das pessoas -->
-            <img src="assets/images/image-not-average-mobile.webp" alt="Pessoas lendo livros socialmente" class="image">
+            <div class="images-book-club">
+                <img src="assets/images/image-not-average-mobile.webp" alt="Pessoas lendo livros socialmente" class="not-avarege-mobile">
+
+                <img src="assets/images/image-not-average-tablet.webp" alt="Pessoas lendo livros socialmente" class="not-avarege-tablet">
+
+                <img src="assets/images/image-not-average-desktop.webp" alt="Pessoas lendo livros socialmente" class="not-avarege-desktop">
+                
+                <img src="assets/images/logos-tech.svg" alt="Logos das tecnologias" class="tech-logos">
+            </div>
         </section>
 
         <!-- Reading Journey -->
